--- a/app/src/main/res/layout-sw600dp/activity_list_questions.xml
+++ b/app/src/main/res/layout-sw600dp/activity_list_questions.xml
@@ -7,31 +7,31 @@
     tools:context="com.example.minyiyang.finalproject.ListQuestions">
 
     <ListView android:id="@+id/MultiQuesView"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"/>
 
     <ListView android:id="@+id/NumQuesView"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/MultiQuesView" />
 
     <ListView android:id="@+id/TFQuesView"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/NumQuesView" />
 
     <ProgressBar
         android:id="@+id/pb"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:layout_above="@+id/lay"
         style="?android:attr/progressBarStyleHorizontal" />
 <LinearLayout
     android:id="@+id/lay"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     >
@@ -42,4 +42,13 @@
         android:layout_alignParentBottom="true"
         android:text="@string/add" />
 </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fl"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_toRightOf="@+id/MultiQuesView"/>
+
+
 </RelativeLayout>
