--- a/app/src/main/res/layout/activity_edite_tfquest.xml
+++ b/app/src/main/res/layout/activity_edite_tfquest.xml
@@ -15,7 +15,7 @@
         android:text="@string/textQust"
         style="@style/textQust"/>
     <EditText
-        android:id="@+id/Num_quest"
+        android:id="@+id/TF_quest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/NumQust"
@@ -26,51 +26,50 @@
         style="@style/input"/>
     <!--answer-->
     <TextView
-        android:id="@+id/NumAns"
+        android:id="@+id/TF_Ans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/textAns"
-        android:layout_below="@+id/Num_quest"
+        android:layout_below="@+id/TF_quest"
         style="@style/textQust"/>
     <RadioButton
-        android:id="@+id/rbt"
+        android:id="@+id/rbt1"
         android:layout_width="wrap_content"
         android:gravity="fill"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/NumAns"
+        android:layout_below="@+id/TF_Ans"
         android:text="@string/rbt" />
     <RadioButton
+        android:id="@+id/rbt2"
         android:layout_width="wrap_content"
         android:gravity="fill"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/NumAns"
-        android:layout_toRightOf="@+id/rbt"
-        android:text="@string/rbt" />
+        android:layout_below="@+id/TF_Ans"
+        android:layout_toRightOf="@+id/rbt1"
+        android:text="@string/rbf" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rbt"
+        android:layout_below="@+id/rbt1"
         >
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_below="@+id/textAnswer4"
             android:text="@string/submit"
-            android:id="@+id/submit_button2"
+            android:id="@+id/submit_button"
             style="@style/button"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_toRightOf="@+id/submit_button"
-            android:layout_below="@+id/textAnswer4"
-            android:text="@string/cancle"
-            android:id="@+id/cancle_button2"
+            android:text="@string/cancel"
+            android:id="@+id/cancle_button"
             style="@style/button"/>
     </LinearLayout>
 </RelativeLayout>
