--- a/app/src/main/res/layout/activity_show_quest.xml
+++ b/app/src/main/res/layout/activity_show_quest.xml
@@ -7,16 +7,11 @@
     tools:context="com.example.minyiyang.finalproject.ShowQuest">
 
     <FrameLayout
-        android:id="@+id/fl_l"
+        android:id="@+id/empty_fl"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_alignParentLeft="true"/>
-    <FrameLayout
-        android:id="@+id/fl_r"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_alignParentRight="true"/>
+
 
 </LinearLayout>
