--- a/app/src/main/res/layout/fragment_multi.xml
+++ b/app/src/main/res/layout/fragment_multi.xml
@@ -21,6 +21,11 @@
         android:layout_below="@+id/textQust"
         style="@style/textQust"/>
     <!--con-->
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/QustCon"
+        android:id="@+id/RGroup">
     <RadioButton
         android:id="@+id/rb1"
         android:layout_width="wrap_content"
@@ -28,13 +33,6 @@
         android:layout_below="@+id/QustCon"
         android:layout_height="wrap_content"
         android:text="A"
-        style="@style/textQust"/>
-    <TextView
-        android:id="@+id/textCon1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/QustCon"
-        android:layout_toRightOf="@+id/rb1"
         style="@style/textQust"/>
     <!--con-->
     <RadioButton
@@ -45,13 +43,6 @@
         android:layout_height="wrap_content"
         android:text="B"
         style="@style/textQust"/>
-    <TextView
-        android:id="@+id/textCon2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textCon1"
-        android:layout_toRightOf="@+id/rb2"
-        style="@style/textQust"/>
     <!--con-->
     <RadioButton
         android:id="@+id/rb3"
@@ -60,13 +51,6 @@
         android:layout_below="@+id/textCon2"
         android:layout_height="wrap_content"
         android:text="C"
-        style="@style/textQust"/>
-    <TextView
-        android:id="@+id/textCon3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textCon2"
-        android:layout_toRightOf="@+id/rb3"
         style="@style/textQust"/>
     <!--con-->
     <RadioButton
@@ -77,17 +61,39 @@
         android:layout_height="wrap_content"
         android:text="D"
         style="@style/textQust"/>
+    </RadioGroup>
+    <TextView
+        android:id="@+id/textCon1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/QustCon"
+        android:layout_toRightOf="@+id/RGroup"
+        style="@style/textQust"/>
+    <TextView
+        android:id="@+id/textCon2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textCon1"
+        android:layout_toRightOf="@+id/RGroup"
+        style="@style/textQust"/>
+    <TextView
+        android:id="@+id/textCon3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textCon2"
+        android:layout_toRightOf="@+id/RGroup"
+        style="@style/textQust"/>
     <TextView
         android:id="@+id/textCon4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textCon3"
-        android:layout_toRightOf="@+id/rb4"
+        android:layout_toRightOf="@+id/RGroup"
         style="@style/textQust"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textCon4"
+        android:layout_below="@+id/RGroup"
         >
         <Button
             android:layout_width="0dp"
