--- a/app/src/main/res/layout/activity_edite_multi_quest.xml
+++ b/app/src/main/res/layout/activity_edite_multi_quest.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="fill_parent"
+    android:id="@+id/mutil_view"
     tools:context="com.example.minyiyang.finalproject.EditeMultiQuest">
     <!--quest-->
     <TextView
