--- a/app/src/main/res/layout/fragment_num.xml
+++ b/app/src/main/res/layout/fragment_num.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.minyiyang.finalproject.NumFragment">
+    tools:context="com.example.minyiyang.finalproject.NumFragment"
+    android:id="@+id/num">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,14 +46,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/del"
-                android:id="@+id/del_b1"
+                android:id="@+id/del_b"
                 style="@style/button"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/update"
-                android:id="@+id/update_b1"
+                android:id="@+id/update_b"
                 style="@style/button"/>
         </LinearLayout>
     </LinearLayout>
