--- a/app/src/main/res/layout/activity_dialog_statistics.xml
+++ b/app/src/main/res/layout/activity_dialog_statistics.xml
@@ -10,64 +10,61 @@
         android:id="@+id/button_state"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:gravity="center"
         android:text="@string/button_state"
         style="@style/author"/>
     <TextView
         android:id="@+id/totalNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:gravity="center"
         android:text="@string/total_num"
-        style="@style/textQust"/>
+        style="@style/text_num"/>
     <TextView
         android:id="@+id/count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        style="@style/textQust"/>
+        android:gravity="center"
+        style="@style/text_num"/>
     <TextView
         android:id="@+id/longest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/longest"
-        style="@style/textQust"/>
+        style="@style/text_num"/>
     <TextView
         android:id="@+id/long_ans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        style="@style/textQust"/>
+        android:gravity="center"
+        style="@style/text_num"/>
     <TextView
         android:id="@+id/shortest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/shortest"
-        style="@style/textQust"
+        style="@style/text_num"
         />
     <TextView
         android:id="@+id/short_ans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        style="@style/textQust"/>
+        android:gravity="center"
+        style="@style/text_num"/>
     <TextView
         android:id="@+id/average"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/average"
-        style="@style/textQust"
+        style="@style/text_num"
         />
     <TextView
         android:id="@+id/ave_ans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        style="@style/textQust"/>
+        android:gravity="center"
+        style="@style/text_num"/>
 </LinearLayout>
