--- a/app/src/main/res/layout/activity_edite_num_quest.xml
+++ b/app/src/main/res/layout/activity_edite_num_quest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +9,6 @@
         android:id="@+id/NumQust"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="@string/textQust"
         style="@style/textQust"/>
     <EditText
@@ -18,8 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/NumQust"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
         android:hint="@string/input_quest"
         android:inputType="textMultiLine"
         style="@style/input"/>
@@ -28,7 +24,6 @@
         android:id="@+id/NumAns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="@string/textAns"
         android:layout_below="@+id/Num_quest"
         style="@style/textQust"/>
@@ -37,21 +32,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/NumAns"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:hint="@string/input_quest"
+        android:hint="@string/input_hite"
+        android:inputType="textMultiLine"
+        style="@style/input"/>
+    <!--accuracy-->
+    <TextView
+        android:id="@+id/NumAcc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/textAcc"
+        android:layout_below="@+id/Num_answer"
+        style="@style/textQust"/>
+    <EditText
+        android:id="@+id/Num_ancc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/NumAcc"
+        android:hint="@string/input_acc"
         android:inputType="textMultiLine"
         style="@style/input"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Num_answer"
+        android:layout_below="@+id/Num_ancc"
         >
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_below="@+id/textAnswer4"
             android:text="@string/submit"
             android:id="@+id/submit_button"
             style="@style/button"/>
@@ -60,7 +68,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_toRightOf="@+id/submit_button"
-            android:layout_below="@+id/textAnswer4"
             android:text="@string/cancel"
             android:id="@+id/cancle_button"
             style="@style/button"/>
