--- a/app/src/main/res/layout-sw600dp/activity_list_questions.xml
+++ b/app/src/main/res/layout-sw600dp/activity_list_questions.xml
@@ -45,7 +45,7 @@
 
     <FrameLayout
         android:id="@+id/fl"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_toRightOf="@+id/MultiQuesView"/>
