--- a/app/src/main/res/layout/activity_edite_tfquest.xml
+++ b/app/src/main/res/layout/activity_edite_tfquest.xml
@@ -64,6 +64,7 @@
             android:layout_weight="1"
             android:text="@string/submit"
             android:id="@+id/submit_button"
+            android:background="@drawable/button1"
             style="@style/button"/>
         <Button
             android:layout_width="0dp"
@@ -72,6 +73,7 @@
             android:layout_toRightOf="@+id/submit_button"
             android:text="@string/cancel"
             android:id="@+id/cancle_button"
+            android:background="@drawable/button1"
             style="@style/button"/>
     </LinearLayout>
 </RelativeLayout>
