--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_vertical|center_horizontal"
-    tools:context="com.example.minyiyang.finalproject.MainActivity">
+    tools:context="com.example.minyiyang.finalproject.MainActivity"
+    >
 
     <Button
         android:id="@+id/button_quiz"
@@ -14,13 +14,18 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/button_quzie"
-    />
+        android:background="@drawable/button1"
+        style="@style/button"
+        />
     <Button
         android:id="@+id/button_xml"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/button_xml"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button2"
+        style="@style/button"
         />
     <Button
         android:id="@+id/button_state"
@@ -28,6 +33,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/button_state"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button1"
+        style="@style/button"
         />
     <Button
         android:id="@+id/button_help"
@@ -35,7 +43,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/button_help"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button2"
+        style="@style/button"
         />
-
 
 </LinearLayout>
