--- a/app/src/main/res/layout/activity_edite_num_quest.xml
+++ b/app/src/main/res/layout/activity_edite_num_quest.xml
@@ -62,6 +62,7 @@
             android:layout_weight="1"
             android:text="@string/submit"
             android:id="@+id/submit_button"
+            android:background="@drawable/button1"
             style="@style/button"/>
         <Button
             android:layout_width="0dp"
@@ -70,6 +71,7 @@
             android:layout_toRightOf="@+id/submit_button"
             android:text="@string/cancel"
             android:id="@+id/cancle_button"
+            android:background="@drawable/button1"
             style="@style/button"/>
     </LinearLayout>
 </RelativeLayout>
