--- a/app/src/main/res/layout/activity_list_questions.xml
+++ b/app/src/main/res/layout/activity_list_questions.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.minyiyang.finalproject.ListQuestions">
-
     <ListView android:id="@+id/MultiQuesView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +27,8 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:layout_above="@+id/lay"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
         style="?android:attr/progressBarStyleHorizontal" />
 <LinearLayout
     android:id="@+id/lay"
@@ -40,6 +41,10 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:text="@string/add" />
+        android:text="@string/add"
+        android:background="@drawable/button1"
+        android:layout_marginBottom="5dp"
+        android:textStyle="bold"
+        style="@style/button"/>
 </LinearLayout>
 </RelativeLayout>
