--- a/app/src/main/res/layout/fragment_tf.xml
+++ b/app/src/main/res/layout/fragment_tf.xml
@@ -61,6 +61,7 @@
                 android:layout_weight="1"
                 android:text="@string/del"
                 android:id="@+id/del_b"
+                android:background="@drawable/button1"
                 style="@style/button"/>
             <Button
                 android:layout_width="0dp"
@@ -69,6 +70,7 @@
                 android:layout_toRightOf="@+id/submit_button"
                 android:text="@string/update"
                 android:id="@+id/update_b"
+                android:background="@drawable/button1"
                 style="@style/button"/>
         </LinearLayout>
     </RelativeLayout>
