--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,22 +3,25 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#F7C709</item>
+        <item name="colorPrimaryDark">#F7C709</item>
         <item name="colorAccent">@color/colorAccent</item>
-
+        <item name="android:textColorSecondary">@android:color/white</item>
     </style>
+
     <style name="textQust" parent="">
         <item name="android:textSize">20sp</item>
         <item name="android:padding">10dp</item>
         <item name="android:textColor">#333</item>
     </style>
+
     <style name="text_num" parent="">
         <item name="android:textSize">20sp</item>
         <item name="android:paddingTop">20dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#333</item>
     </style>
+
     <style name="input" parent="">
         <item name="android:textSize">15sp</item>
         <item name="android:paddingLeft">5dp</item>
@@ -26,20 +29,71 @@
         <item name="android:paddingTop">10dp</item>
         <item name="android:layout_margin">5dp</item>
     </style>
+
     <style name="button" parent="">
         <item name="android:textSize">15sp</item>
         <item name="android:padding">10dp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:layout_marginTop">3dp</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
     </style>
+
+    <style name="item1" parent="">
+        <item name="android:textSize">15sp</item>
+        <item name="android:padding">30dp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+    </style>
+
+    <style name="item2" parent="">
+        <item name="android:textSize">15sp</item>
+        <item name="android:padding">30dp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
     <style name="rb" parent="">
         <item name="android:textSize">15sp</item>
     </style>
+
     <style name="author" parent="">
         <item name="android:textSize">20sp</item>
         <item name="android:padding">10dp</item>
-        <item name="android:background">#eec700</item>
+        <item name="android:background">#F7C709</item>
         <item name="android:textColor">#fff</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAlignment">center</item>
 
     </style>
+
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">#F7C709</item>
+        <!--<item name="android:background">@color/colorPrimaryDark</item>-->
+
+    </style>
+
+    <style name="PopToolbar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="overlapAnchor">false</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:dropDownVerticalOffset">-15dp</item>
+    </style>
+
+    <style name="ToolBar.Title" parent="@style/TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
